--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="main.js"></script>
+    <script src="src/main.js"></script>
     <title>Clash of Hands</title>
-    <link href="css/main.css" rel="stylesheet" />
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="src/css/main.css" rel="stylesheet" />
+    <link href="dist/output.css"rel="stylesheet" />
   </head>
   <body class="bg-black">
     <div
