--- a/index.html
+++ b/index.html
@@ -5,27 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="src/main.js"></script>
-    <title>Clash of Hands</title>
+    <title>Clash of Cattitude</title>
     <link href="src/css/main.css" rel="stylesheet" />
-    <link href="dist/output.css"rel="stylesheet" />
+    <link href="dist/output.css" rel="stylesheet" />
   </head>
-  <body class="bg-black">
+  <body class="flex flex-col bg-gray-100">
     <div
-      id="app"
-      class="grid grid-cols-1 w-screen text-white bg-black place-items-center h-screen"
+      id="header"
+      class="basis-1/12 flex bg-gray-50 drop-shadow-sm justify-center items-center grow-0"
     >
-      <div class="grid grid-cols-3 w-full">
-      <div id="title" class="w-full flex text-center col-span-2">
+      <div id="logo" class="flex-1 mx-8 text-3xl">Scissor</div>
+      <div id="burger" class="text-3xl cursor-pointer mx-8">&#9776;</div>
+      <div id="menu" class="hidden">
+        <div
+          id="title"
+          class="flex-none h-1/5 w-full text-5xl text-center justify-center flex items-center"
+        >
+          <p class="pTitle">Clash of Cattitude</p>
+        </div>
+        <div id="selection" class="flex-1 flex flex-col">
+          <button class="flex-1 text-5xl">play</button>
+          <button class="flex-1 text-3xl">more games</button>
+        </div>
       </div>
-      <div id="verSus" class=""></div>
-      
-      </div>
+    </div>
+    <div
+      id="main"
+      class="basis-full flex justify-center items-center grow bg-gray-300"
+    >
       <div
-        id="disPlay"
-        class="flex flex-col lg:grid-cols-5 w-screen h-screen lg:pr-5 m-0 row-span-2"
+        id="scene"
+        class="bg-gray-50 flex flex-col rounded-xl drop-shadow-sm h-[92%] w-[92%]"
       >
-        <div id="compDisplay" class="grid grid-cols-2 h-60 w-60"></div>
-       
+        <div id="npc" class="flex-1 basis-2/5 flex">
+          <div id="instance" class="flex-1 flex flex-col basis-3/4">
+            <div
+              id="npcLife"
+              class="flex-1 flex basis-1/6 items-center justify-end"
+            ></div>
+            <div
+              id="npcPhrase"
+              class="flex-1 flex flex-col ml-8 mb-5 rounded-xl place-self-center basis-5/6 h-[92%] w-[92%]"
+            >
+              <p class="text-right text-lgs text-red-400 font-bold">
+                WhiskerClaw
+              </p>
+            </div>
+          </div>
+          <div id="pic" class="flex-1 flex flex-col items-center basis-1/4">
+            <img src="src/img/cat/whiskerclaw.png" class="pt-5 mr-10" />
+          </div>
+        </div>
+        <div id="user" class="flex-1 basis-2/5 flex">
+          <div id="pic" class="flex-1 flex flex-col items-center basis-1/4">
+            <img src="src/img/cat/whiskerclaw.png" class="pt-5 ml-10" />
+          </div>
+          <div id="instance" class="flex-1 flex flex-col basis-3/4">
+            <div
+              id="userLife"
+              class="flex-1 flex basis-1/6 items-center justify-start"
+            ></div>
+            <div
+              id="userPhrase"
+              class="flex-1 flex flex-col mr-8 mb-5 rounded-xl place-self-center basis-5/6 h-[92%] w-[92%]"
+            >
+              <p class="text-left text-lgs text-red-400 font-bold">Mark</p>
+            </div>
+          </div>
+        </div>
+        <div
+          id="userChoices"
+          class="flex-1 basis-1/5 items-center p-5 mb-5 text-lg flex justify-center gap-4 w-full h-full"
+        >
+          <div id="rockBtn" class="w-16 h-16 text-center pt-2">Rock</div>
+          <div id="paperBtn" class="w-16 h-16 text-center pt-2">Paper</div>
+          <div id="scissorBtn" class="w-16 h-16 text-center pt-2">Scissor</div>
+        </div>
+      </div>
+    </div>
+    <div
+      id="footer"
+      class="bg-gray-50 flex justify-center items-center drop-shadow-sm basis-1/12"
+    >
+      <p class="text-base">Made with Love - markvayson</p>
     </div>
   </body>
 </html>
