--- a/index.html
+++ b/index.html
@@ -15,27 +15,15 @@
       class="basis-1/12 flex bg-gray-50 drop-shadow-sm justify-center items-center grow-0"
     >
       <div id="logo" class="flex-1 mx-8 text-3xl">Scissor</div>
-      <div id="burger" class="text-3xl cursor-pointer mx-8">&#9776;</div>
-      <div id="menu" class="hidden">
-        <div
-          id="title"
-          class="flex-none h-1/5 w-full text-5xl text-center justify-center flex items-center"
-        >
-          <p class="pTitle">Clash of Cattitude</p>
-        </div>
-        <div id="selection" class="flex-1 flex flex-col">
-          <button class="flex-1 text-5xl">play</button>
-          <button class="flex-1 text-3xl">more games</button>
-        </div>
-      </div>
+      <div id="burger" class="hidden text-3xl cursor-pointer mx-8">&#9776;</div>
     </div>
     <div
       id="main"
-      class="basis-full flex justify-center items-center grow bg-gray-300"
+      class="basis-full relative flex justify-center items-center grow bg-gray-300"
     >
       <div
         id="scene"
-        class="bg-gray-50 flex flex-col rounded-xl drop-shadow-sm h-[92%] w-[92%]"
+        class="bg-gray-50 z-0 p-5 flex flex-col rounded-xl drop-shadow-sm h-[92%] w-[92%]"
       >
         <div id="npc" class="flex-1 basis-2/5 flex">
           <div id="instance" class="flex-1 flex flex-col basis-3/4">
@@ -80,6 +68,21 @@
           <div id="rockBtn" class="w-16 h-16 text-center pt-2">Rock</div>
           <div id="paperBtn" class="w-16 h-16 text-center pt-2">Paper</div>
           <div id="scissorBtn" class="w-16 h-16 text-center pt-2">Scissor</div>
+        </div>
+      </div>
+      <div
+        id="menu"
+        class="bg-blue-50 rounded-lg flex flex-col shadow-xl w-5/6 h-5/6 absolute"
+      >
+        <div
+          id="title"
+          class="flex-none h-1/5 w-full text-5xl text-center justify-center flex items-center"
+        >
+          <p class="pTitle">Clash of Cattitude</p>
+        </div>
+        <div id="selection" class="flex-1 flex flex-col">
+          <button id="play" class="flex-1 text-5xl hover:text-red-300"></button>
+          <button class="flex-1 text-3xl">more games</button>
         </div>
       </div>
     </div>
