--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
       >
         <div
           id="title"
-          class="flex-none h-1/5 w-full text-5xl text-center justify-center flex items-center"
+          class="flex-none gap-4 pt-5 flex-col h-1/5 w-full text-5xl text-center justify-center flex items-center"
         >
           <p class="pTitle">Clash of Cattitude</p>
+          <p class="text-lg">
+            Conquer the Feline Foe on the Virtual RPS Battlefield
+          </p>
         </div>
         <div id="selection" class="flex-1 flex flex-col">
           <button id="play" class="flex-1 text-5xl hover:text-red-300"></button>
