--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       id="header"
       class="basis-1/12 flex bg-gray-50 drop-shadow-sm justify-center items-center grow-0"
     >
-      <div id="logo" class="flex-1 mx-8 text-3xl">Scissor</div>
-      <div id="burger" class="hidden text-3xl cursor-pointer mx-8">&#9776;</div>
+      <div id="logo" class="flex-1 mx-8 text-lg hover:text-red-300 font-bold">
+        <p>ClashOfCattitude</p>
+      </div>
+      <div id="burger" class="font-bold text-xl cursor-pointer mx-8">
+        &#9776;
+      </div>
     </div>
     <div
       id="main"
@@ -76,15 +80,15 @@
       >
         <div
           id="title"
-          class="flex-none gap-4 pt-5 flex-col h-1/5 w-full text-5xl text-center justify-center flex items-center"
+          class="flex-none gap-4 pt-5 flex-col w-full text-5xl text-center justify-center flex items-center"
         >
           <p class="pTitle">Clash of Cattitude</p>
-          <p class="text-lg">
+          <p class="text-lg px-5">
             Conquer the Feline Foe on the Virtual RPS Battlefield
           </p>
         </div>
         <div id="selection" class="flex-1 flex flex-col">
-          <button id="play" class="flex-1 text-5xl hover:text-red-300"></button>
+          <button id="play" class="flex-1 text-5xl"></button>
           <button class="flex-1 text-3xl">more games</button>
         </div>
       </div>
