--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="logo" class="flex-1 mx-8 text-lg hover:text-red-300 font-bold">
         <p>ClashOfCattitude</p>
       </div>
-      <div id="burger" class="font-bold text-xl cursor-pointer mx-8">
+      <div id="burger" class="hidden font-bold text-xl cursor-pointer mx-8">
         &#9776;
       </div>
     </div>
@@ -29,49 +29,81 @@
         id="scene"
         class="bg-gray-50 z-0 p-5 flex flex-col rounded-xl drop-shadow-sm h-[92%] w-[92%]"
       >
-        <div id="npc" class="flex-1 basis-2/5 flex">
-          <div id="instance" class="flex-1 flex flex-col basis-3/4">
-            <div
-              id="npcLife"
-              class="flex-1 flex basis-1/6 items-center justify-end"
-            ></div>
-            <div
-              id="npcPhrase"
-              class="flex-1 flex flex-col ml-8 mb-5 rounded-xl place-self-center basis-5/6 h-[92%] w-[92%]"
-            >
-              <p class="text-right text-lgs text-red-400 font-bold">
-                WhiskerClaw
-              </p>
+        <div
+          id="npc"
+          class="flex-1 px-3 py-3 rounded-t-lg shadow-md bg-cover flex-col basis-1/2 flex"
+        >
+          <div
+            id="npcPhrase"
+            class="basis-6/12 flex flex-col text-base rounded-lg p-3"
+          >
+            <div id="npcPhraseText" class="flex-1"></div>
+            <div id="npcCred" class="text-right text-red-600 font-bold">
+              - WhiskerClaw
             </div>
           </div>
-          <div id="pic" class="flex-1 flex flex-col items-center basis-1/4">
-            <img src="src/img/cat/whiskerclaw.png" class="pt-5 mr-10" />
-          </div>
-        </div>
-        <div id="user" class="flex-1 basis-2/5 flex">
-          <div id="pic" class="flex-1 flex flex-col items-center basis-1/4">
-            <img src="src/img/cat/whiskerclaw.png" class="pt-5 ml-10" />
-          </div>
-          <div id="instance" class="flex-1 flex flex-col basis-3/4">
+          <div id="npcICON" class="basis-5/12 flex justify-end"></div>
+          <div
+            id="instance"
+            class="px-2 w-full rounded-lg flex-1 gap-2 items-center justify-start flex basis-1/12"
+          >
             <div
-              id="userLife"
-              class="flex-1 flex basis-1/6 items-center justify-start"
-            ></div>
-            <div
-              id="userPhrase"
-              class="flex-1 flex flex-col mr-8 mb-5 rounded-xl place-self-center basis-5/6 h-[92%] w-[92%]"
+              id="npcID"
+              class="flex-1 w-full rounded-lg text-base flex gap-2 items-center justify-start"
             >
-              <p class="text-left text-lgs text-red-400 font-bold">Mark</p>
+              <div
+                id="npcName"
+                class="text-left p-2 font-bold text-red-600 shadow-md text-base rounded-full bg-gray-50"
+              >
+                Wc
+              </div>
+              <div id="npcChoice" class="flex-1"></div>
             </div>
+            <div id="npcLife" class="text-2xl text-right flex-1"></div>
           </div>
         </div>
         <div
-          id="userChoices"
-          class="flex-1 basis-1/5 items-center p-5 mb-5 text-lg flex justify-center gap-4 w-full h-full"
+          id="user"
+          class="bg-gray-100 shadow-md rounded-b-lg flex-1 basis-1/2 flex"
         >
-          <div id="rockBtn" class="w-16 h-16 text-center pt-2">Rock</div>
-          <div id="paperBtn" class="w-16 h-16 text-center pt-2">Paper</div>
-          <div id="scissorBtn" class="w-16 h-16 text-center pt-2">Scissor</div>
+          <div id="instance" class="flex-1 px-5 py-5 flex flex-col basis-3/4">
+            <div
+              id="userInfo"
+              class="w-full flex basis-1/6 items-center justify-center"
+            >
+              <div
+                id="userID"
+                class="w-full flex gap-2 flex-1 justify-center items-center"
+              >
+                <p
+                  id="userName"
+                  class="text-left text-base rounded-full bg-gray-50 shadow-md p-2 text-blue-400 font-bold"
+                >
+                  Me
+                </p>
+                <p id="userChoice" class="flex-1"></p>
+              </div>
+              <div
+                id="userLife"
+                class="flex-1 text-right text-2xl text-red-500"
+              ></div>
+            </div>
+            <div id="userCTA" class="flex-1 w-full h-full flex flex-col py-3">
+              <div id="userPhrase" class="basis-3/5 text-base text-left"></div>
+              <div
+                id="userBTNS"
+                class="flex-1 basis-2/5 text-base flex justify-between px-5 w-full h-full"
+              >
+                <div id="rockBtn" class="w-10 h-10 text-center pt-2">Rock</div>
+                <div id="paperBtn" class="w-10 h-10 text-center pt-2">
+                  Paper
+                </div>
+                <div id="scissorBtn" class="w-10 h-10 text-center pt-2">
+                  Scissor
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div
