--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
               </div>
               <div id="npcChoice" class="flex-1"></div>
             </div>
-            <div id="npcLife" class="text-2xl text-right flex-1"></div>
+            <div
+              id="npcLife"
+              class="text-xl text-red-500 text-right flex-1"
+            ></div>
           </div>
         </div>
         <div
@@ -85,7 +88,7 @@
               </div>
               <div
                 id="userLife"
-                class="flex-1 text-right text-2xl text-red-500"
+                class="flex-1 text-right text-xl text-red-500"
               ></div>
             </div>
             <div id="userCTA" class="flex-1 w-full h-full flex flex-col py-3">
