--- a/index.html
+++ b/index.html
@@ -6,28 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="src/main.js"></script>
     <title>Clash of Cattitude</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap"
+      rel="stylesheet"
+    />
     <link href="src/css/main.css" rel="stylesheet" />
     <link href="dist/output.css" rel="stylesheet" />
   </head>
   <body class="flex flex-col bg-gray-100">
     <div
       id="header"
-      class="basis-1/12 flex bg-gray-50 drop-shadow-sm justify-center items-center grow-0"
+      class="basis-1/12 flex bg-cyan-500 drop-shadow-sm justify-center items-center grow-0"
     >
-      <div id="logo" class="flex-1 mx-8 text-lg hover:text-red-300 font-bold">
-        <p>ClashOfCattitude</p>
+      <div id="logo" class="flex-1 mx-8 text-lg text-gray-50">
+        <p>ClashofCattitude</p>
       </div>
-      <div id="burger" class="hidden font-bold text-xl cursor-pointer mx-8">
+      <div
+        id="burger"
+        class="hidden font-bold text-xl text-gray-50 cursor-pointer mx-8"
+      >
         &#9776;
       </div>
     </div>
     <div
       id="main"
-      class="basis-full relative flex justify-center items-center grow bg-gray-300"
+      class="basis-full relative flex justify-center items-center grow bg-gray-100"
     >
       <div
         id="scene"
-        class="bg-gray-50 z-0 p-5 flex flex-col rounded-xl drop-shadow-sm h-[92%] w-[92%]"
+        class="hidden z-0 p-5 flex-col rounded-xl drop-shadow-sm h-[92%] w-[92%]"
       >
         <div
           id="npc"
@@ -49,11 +58,11 @@
           >
             <div
               id="npcID"
-              class="flex-1 w-full rounded-lg text-base flex gap-2 items-center justify-start"
+              class="flex-1 w-full rounded-full text-base flex gap-2 items-center justify-start"
             >
               <div
                 id="npcName"
-                class="text-left p-2 font-bold text-red-600 shadow-md text-base rounded-full bg-gray-50"
+                class="text-left p-2 font-bold bg-red-600 shadow-md text-base rounded-full text-gray-50"
               >
                 Wc
               </div>
@@ -66,8 +75,14 @@
           </div>
         </div>
         <div
+          id="again"
+          class="bg-gray-50 hidden shadow-md hover:bg-red-300 hover:text-xl font-bold text-lg left-1/2 top-1/2 absolute transform -translate-x-1/2 -translate-y-1/2 w-auto h-auto p-5 rounded-full justify-center items-center"
+        >
+          Try Again
+        </div>
+        <div
           id="user"
-          class="bg-gray-100 shadow-md rounded-b-lg flex-1 basis-1/2 flex"
+          class="bg-gray-50 shadow-md rounded-b-lg flex-1 basis-1/2 flex"
         >
           <div id="instance" class="flex-1 px-5 py-5 flex flex-col basis-3/4">
             <div
@@ -80,7 +95,7 @@
               >
                 <p
                   id="userName"
-                  class="text-left text-base rounded-full bg-gray-50 shadow-md p-2 text-blue-400 font-bold"
+                  class="text-left text-base rounded-full bg-cyan-500 shadow-md p-2 text-gray-50 font-bold"
                 >
                   Me
                 </p>
@@ -88,20 +103,31 @@
               </div>
               <div
                 id="userLife"
-                class="flex-1 text-right text-xl text-red-500"
+                class="flex-1 text-right transition-opacity text-xl text-red-500"
               ></div>
             </div>
             <div id="userCTA" class="flex-1 w-full h-full flex flex-col py-3">
               <div id="userPhrase" class="basis-3/5 text-base text-left"></div>
               <div
                 id="userBTNS"
-                class="flex-1 basis-2/5 text-base flex justify-between px-5 w-full h-full"
+                class="flex-1 basis-2/5 bg-gray-50 text-base flex justify-between px-5 w-full h-full"
               >
-                <div id="rockBtn" class="w-10 h-10 text-center pt-2">Rock</div>
-                <div id="paperBtn" class="w-10 h-10 text-center pt-2">
+                <div
+                  id="rockBtn"
+                  class="w-10 ease-out duration-300 h-10 text-center pt-2"
+                >
+                  Rock
+                </div>
+                <div
+                  id="paperBtn"
+                  class="w-10 ease-out duration-300 h-10 text-center pt-2"
+                >
                   Paper
                 </div>
-                <div id="scissorBtn" class="w-10 h-10 text-center pt-2">
+                <div
+                  id="scissorBtn"
+                  class="w-10 ease-out duration-300 h-10 text-center pt-2"
+                >
                   Scissor
                 </div>
               </div>
@@ -111,18 +137,18 @@
       </div>
       <div
         id="menu"
-        class="bg-blue-50 rounded-lg flex flex-col shadow-xl w-5/6 h-5/6 absolute"
+        class="bg-cyan-500 rounded-lg text-gray-50 flex flex-col shadow-xl w-5/6 h-5/6 absolute"
       >
         <div
           id="title"
           class="flex-none gap-4 pt-5 flex-col w-full text-5xl text-center justify-center flex items-center"
         >
-          <p class="pTitle">Clash of Cattitude</p>
-          <p class="text-lg px-5">
+          <p id="logo" class="">Clash of Cattitude</p>
+          <p class="text-base px-5 logo">
             Conquer the Feline Foe on the Virtual RPS Battlefield
           </p>
         </div>
-        <div id="selection" class="flex-1 flex flex-col">
+        <div id="selection" class="flex-1 logo flex flex-col">
           <button id="play" class="flex-1 text-5xl"></button>
           <button class="flex-1 text-3xl">more games</button>
         </div>
@@ -130,9 +156,13 @@
     </div>
     <div
       id="footer"
-      class="bg-gray-50 flex justify-center items-center drop-shadow-sm basis-1/12"
+      class="bg-cyan-500 text-gray-50 flex justify-center items-center drop-shadow-sm basis-1/12"
     >
-      <p class="text-base">Made with Love - markvayson</p>
+      <p class="text-base">
+        ©2023
+        <a href="https://github.com/markvayson" target="_blank">mark vayson</a>
+        | All Rights Reserved
+      </p>
     </div>
   </body>
 </html>
