--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="src/words.js"></script>
     <script src="src/main.js"></script>
     <title>Clash of Cattitude</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -58,7 +59,7 @@
           >
             <div
               id="npcID"
-              class="flex-1 w-full rounded-full text-base flex gap-2 items-center justify-start"
+              class="flex-1 w-full transition-all rounded-full text-base flex gap-2 items-center justify-start"
             >
               <div
                 id="npcName"
@@ -76,7 +77,7 @@
         </div>
         <div
           id="again"
-          class="bg-gray-50 hidden shadow-md hover:bg-red-300 hover:text-xl font-bold text-lg left-1/2 top-1/2 absolute transform -translate-x-1/2 -translate-y-1/2 w-auto h-auto p-5 rounded-full justify-center items-center"
+          class="bg-gray-50 hidden shadow-md hover:text-xl transition ease-in-out delay-150 hover:scale-110 hover:bg-indigo-500 duration-300 font-bold text-lg left-1/2 top-1/2 absolute transform -translate-x-1/2 -translate-y-1/2 w-auto h-auto p-5 rounded-full justify-center items-center"
         >
           Try Again
         </div>
@@ -91,7 +92,7 @@
             >
               <div
                 id="userID"
-                class="w-full flex gap-2 flex-1 justify-center items-center"
+                class="w-full flex gap-2 flex-1 transition-all justify-center items-center"
               >
                 <p
                   id="userName"
@@ -137,7 +138,7 @@
       </div>
       <div
         id="menu"
-        class="bg-cyan-500 rounded-lg text-gray-50 flex flex-col shadow-xl w-5/6 h-5/6 absolute"
+        class="bg-cyan-500 transition-opacity duration-500 ease-in-out rounded-lg text-gray-50 flex flex-col shadow-xl w-5/6 h-5/6 absolute"
       >
         <div
           id="title"
@@ -150,6 +151,7 @@
         </div>
         <div id="selection" class="flex-1 logo flex flex-col">
           <button id="play" class="flex-1 text-5xl"></button>
+          <button id="settings" class="flex-1 text-5xl">settings</button>
           <button class="flex-1 text-3xl">more games</button>
         </div>
       </div>
