--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body class="flex flex-col bg-gray-100">
     <div
       id="header"
-      class="basis-1/12 flex bg-cyan-500 drop-shadow-sm justify-center items-center grow-0"
+      class="basis-1/12 flex bg-blue-500 drop-shadow-sm justify-center items-center grow-0"
     >
       <div id="logo" class="flex-1 mx-8 text-lg text-gray-50">
         <p>ClashofCattitude</p>
@@ -37,7 +37,7 @@
     >
       <div
         id="scene"
-        class="hidden z-0 p-5 flex-col rounded-xl drop-shadow-sm h-[92%] w-[92%]"
+        class="hidden xl:w-2/5 md:w-1/2 sm:w-3/4 z-0 p-5 flex-col rounded-xl drop-shadow-sm h-[95%] w-[95%]"
       >
         <div
           id="npc"
@@ -45,35 +45,35 @@
         >
           <div
             id="npcPhrase"
-            class="basis-6/12 flex flex-col text-base rounded-lg p-3"
+            class="basis-8/12 flex flex-col text-base rounded-lg p-3"
           >
+            <div
+              id="instance"
+              class="w-full pb-2 rounded-lggap-2 items-center justify-start flex basis-1/12"
+            >
+              <div
+                id="npcID"
+                class="flex-1 w-full transition-all rounded-full text-base flex gap-2 items-center justify-start"
+              >
+                <div
+                  id="npcName"
+                  class="text-left p-2 font-bold bg-red-600 shadow-md text-base rounded-full text-gray-50"
+                >
+                  Wc
+                </div>
+                <div id="npcChoice" class="flex-1"></div>
+              </div>
+              <div
+                id="npcLife"
+                class="text-xl text-red-500 text-right flex-1"
+              ></div>
+            </div>
             <div id="npcPhraseText" class="flex-1"></div>
             <div id="npcCred" class="text-right text-red-600 font-bold">
               - WhiskerClaw
             </div>
           </div>
-          <div id="npcICON" class="basis-5/12 flex justify-end"></div>
-          <div
-            id="instance"
-            class="px-2 w-full rounded-lg flex-1 gap-2 items-center justify-start flex basis-1/12"
-          >
-            <div
-              id="npcID"
-              class="flex-1 w-full transition-all rounded-full text-base flex gap-2 items-center justify-start"
-            >
-              <div
-                id="npcName"
-                class="text-left p-2 font-bold bg-red-600 shadow-md text-base rounded-full text-gray-50"
-              >
-                Wc
-              </div>
-              <div id="npcChoice" class="flex-1"></div>
-            </div>
-            <div
-              id="npcLife"
-              class="text-xl text-red-500 text-right flex-1"
-            ></div>
-          </div>
+          <div id="npcICON" class="basis-4/12 flex justify-end items-end"></div>
         </div>
         <div
           id="again"
@@ -96,7 +96,7 @@
               >
                 <p
                   id="userName"
-                  class="text-left text-base rounded-full bg-cyan-500 shadow-md p-2 text-gray-50 font-bold"
+                  class="text-left text-base rounded-full bg-blue-500 shadow-md p-2 text-gray-50 font-bold"
                 >
                   Me
                 </p>
@@ -138,7 +138,7 @@
       </div>
       <div
         id="menu"
-        class="bg-cyan-500 transition-opacity duration-500 ease-in-out rounded-lg text-gray-50 flex flex-col shadow-xl w-5/6 h-5/6 absolute"
+        class="bg-blue-500 transition-opacity duration-500 ease-in-out rounded-lg text-gray-50 flex flex-col shadow-xl xl:w-2/5 md:w-1/2 sm:w-3/4 h-5/6 w-5/6 absolute"
       >
         <div
           id="title"
@@ -158,7 +158,7 @@
     </div>
     <div
       id="footer"
-      class="bg-cyan-500 text-gray-50 flex justify-center items-center drop-shadow-sm basis-1/12"
+      class="bg-blue-500 text-gray-50 flex justify-center items-center drop-shadow-sm basis-1/12"
     >
       <p class="text-base">
         ©2023
