--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 >
                   Wc
                 </div>
-                <div id="npcChoice" class="flex-1"></div>
+                <div id="npcChoice" class="flex-1 text-base"></div>
               </div>
               <div
                 id="npcLife"
-                class="text-xl text-red-500 text-right flex-1"
+                class="text-lg text-red-500 text-right flex-1"
               ></div>
             </div>
             <div id="npcPhraseText" class="flex-1"></div>
@@ -100,11 +100,11 @@
                 >
                   Me
                 </p>
-                <p id="userChoice" class="flex-1"></p>
+                <p id="userChoice" class="flex-1 text-base"></p>
               </div>
               <div
                 id="userLife"
-                class="flex-1 text-right transition-opacity text-xl text-red-500"
+                class="flex-1 text-right transition-opacity text-lg text-red-500"
               ></div>
             </div>
             <div id="userCTA" class="flex-1 w-full h-full flex flex-col py-3">
@@ -158,7 +158,7 @@
     </div>
     <div
       id="footer"
-      class="bg-blue-500 text-gray-50 flex justify-center items-center drop-shadow-sm basis-1/12"
+      class="bg-blue-500 bg-red text-gray-50 flex justify-center items-center drop-shadow-sm basis-1/12"
     >
       <p class="text-base">
         ©2023
