--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div
         id="burger"
-        class="hidden font-bold text-xl text-gray-50 cursor-pointer mx-8"
+        class="hidden font-bold text-3xl text-gray-50 cursor-pointer mx-8"
       >
         &#9776;
       </div>
