--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         >
           <button
             id="play"
-            class="text-5xl mb-5 transition-all hover:text-6xl"
+            class="text-5xl mb-5 transition-all hover:text-cyan-500 hover:text-6xl"
           ></button>
         </div>
       </div>
